--- a/html/driverRegistration.html
+++ b/html/driverRegistration.html
@@ -4,7 +4,7 @@
 <body>
 
 <div> <!-- wrapper -->
-  <form>
+  <form action="/driver/SignUp">
     <label for="fullname">Name</label><br>
     <input type="text" id="fullname" name="fullname"><br>
     <label for="username">Username</label><br>
