--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -35,7 +35,7 @@
         <div class = "rectangleBackground"> <!-- Driver Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/action_page.php" class="container">
+            <form action="/rest/Reg" method="post" class="container">
               <h1>Restaurant</h1>
               <label for="fullname">Restaurant Name</label><br>
               <input type="text" placeholder="Enter Restaurant Name" id="fullname" name="name" required><br>
@@ -49,7 +49,7 @@
               <label for="securityQuestion">Security Question</label><br>
               <input type="text" placeholder="Security Question" id="securityQuestion" name="securityQ" required><br>
               <label for="Spsw">Security Answer</label><br>
-              <input type="password" id="Spsw" placeholder="Enter Security Answer" name="psw" required><br>
+              <input type="password" id="Spsw" placeholder="Enter Security Answer" name="Spsw" required><br>
 
 
               <label for="address">Street Address</label><br>
