--- a/website/about.html
+++ b/website/about.html
@@ -34,14 +34,23 @@
             <p><b>On-Demand Food Delivery Service</b> is a semester-long project for <b>San Jose State's CS160 Software Engineering Course</b>, taught by Frank Butt. This project consists of five members: John Kennedy, Natisha Khadgi, Akshay Sud, and Hangyuan Xu. </p>
               <p>The goal of this project is to learn Agile methodology and create a website with three tiers: front end, middle tier, and backend. You can see our work on our Github page by clicking <a href="https://github.com/jfk-sjsu/ODFDS">here</a>.</p>
 
-          </div>
+              <br>
+              <div class="credits"> <!-- credits -->
+              <p><b>Home Page Credits</b></p>
+              <p>Map | <a href="https://unsplash.com/@anniespratt">Annie Spratt</a> on <a href="https://unsplash.com/photos/ixRYvsuvazA">UnSplash</a></p>
+              <p>Diner | <a href="https://unsplash.com/@spencerdavis">Spencer Davis</a> on <a href="https://unsplash.com/photos/q3ApAZsS1os">UnSplash</a></p>
+              <p>Food | <a href="https://unsplash.com/@victoriakosmo">Victoria Shes</a> on <a href="https://unsplash.com/photos/Qa29U4Crvn4">UnSplash</a></p>
+
+              <br>
+              <p><b>About Page Credits</b></p>
+              <p>Map | <a href="https://www.pexels.com/@andrew">Andrew Neel</a> on <a href="https://www.pexels.com/photo/assorted-map-pieces-2859169/">Pexels</a></p>
+              <p>Drinks | <a href="https://www.pexels.com/@chanwalrus">Chan Walrus</a> on <a href="https://www.pexels.com/photo/chair-cutlery-diner-dining-941861/">Pexels</a></p>
+              <p>Food | <a href="https://www.pexels.com/@flodahm">Flo Dahm</a> on <a href="https://www.pexels.com/photo/alcoholic-beverages-close-up-cuisine-cutlery-541216/">Pexels</a></p>
+            </div> <!-- end of credits -->
+          </div> <!-- end of left -->
           <div class="right">
-            <img src="media/homeImage.png" width="500"alt="Home Image">
-          </div>
-
-
-
-
+            <img src="media/aboutImage.png" alt="About Image" class="responsive">
+          </div> <!-- end of right -->
 
       </div> <!-- end of main content -->
     </div> <!-- end of container -->
