--- a/website/creatives.html
+++ b/website/creatives.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<link rel="stylesheet" href="mainStyle.css">
   <link rel="stylesheet" href="styles1.css">
   <script src = "script.js" defer></script>
   <head>
@@ -8,9 +9,9 @@
   </head>
   <body>
     <div class="container"> <!-- wrapper -->
-      <div class ="main"> <!-- all content goes here -->
+      <div class ="main"> <!-- main // all content goes here -->
         <nav class = "navbar"> <!-- navbar -->
-          <div class="logo"><a href="index.html"><img src="media/logo.png" height="50"></a></div>
+          <div class="logo"><a href="index.html"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
           <a href="#" class = "toggle-button">
           <span class ="bar"></span>
           <span class ="bar"></span>
@@ -26,18 +27,45 @@
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
 
+  <!-- WHERE PAGE CONTENT IS INSERTED -->
 
+        <div class="pageTitle"><h2>Creatives</h2> <!-- pageTitle -->
+          <p>Meet the team that brought you On Demand Food Delivery Service! These members have worked hard to have this project come to fruition.</p>
+</div> <!-- end of pageTitle -->
+        <div class = "singular"> <!-- div where page content goes -->
 
-
-          <!-- WHERE PAGE CONTENT IS INSERTED -->
-          <div class="pageTitle"><h2>Meet the Team</h2>
-            <p>Meet the team that brought you On Demand Food Delivery Service! These members have worked hard to have this project come to fruition.</p>
+          <div class = "profile"><img src="media/jfkProfile.png" height="175" alt="JFK Profile Image">
+            <h4>John Kennedy</h4>
+            <p>Application & Solutions Engineer</p>
           </div>
-          <div class = "singular"> <!-- div where content goes -->
+
+          <div class = "profile"><img src="media/nkProfile.png" height="175" alt="NK Profile Image">
+            <h4>Natisha Khadgi</h4>
+            <p>Frontend Developer</p>
+          </div>
+
+          <div class = "profile"><img src="media/ssProfile.png" height="175" alt="SS Profile Image">
+            <h4>Sambath Say</h4>
+            <p>Maps Developer</p>
+          </div>
+
+          <div class = "profile"><img src="media/asProfile.png" height="175" alt="AS Profile Image">
+            <h4>Akshay Sud</h4>
+            <p>Backend Developer</p>
+          </div>
+
+          <div class = "profile"><img src="media/hxProfile.png" height="175" alt="HX Profile Image">
+            <h4>Hangyuan Xu</h4>
+            <p>Mid-Tier & Javascript Engineer</p>
+          </div>
+
+
+        </div> <!-- end of page content -->
 
 
 
-</div> <!-- end of singular content -->
+
+
       </div> <!-- end of main content -->
     </div> <!-- end of container -->
     <footer class="footer"> <!-- footer -->
