--- a/website/driverRegister.html
+++ b/website/driverRegister.html
@@ -35,7 +35,7 @@
         <div class = "rectangleBackground"> <!-- Driver Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/driver/SignUp" class="container">
+            <form action="/driver/SignUp">
               <h1>Driver</h1>
               <label for="fullname">Name</label><br>
               <input type="text" placeholder="Enter Full Name" id="fullname" name="name" required><br>
@@ -51,12 +51,11 @@
               <label for="Spsw">Security Answer</label><br>
               <input type="password" id="Spsw" placeholder="Enter Security Answer" name="psw" required><br>
 
-
               <label for="securitmakeModelyQuestion">Make and Model of Car</label><br>
               <input type="text" placeholder="Enter Make and Model" id="makeModel" name="carMake" required><br>
               <label for="licenseplate">License Plate</label><br>
-              <input type="text" placeholder="Enter License Plate" id="licenseplate" name="license" required><br>
-              <button type="submit" class="btn">SignUp</button>
+              <input type="text" placeholder="Enter License Plate" id="licenseplate" name="license" required><br><br>
+              <center><button type="submit" class="button2">Sign Up</button></center>
             </form>
         </div>
       </div> <!-- Driver Register Ends -->
