--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="styles1.css">
   <link rel="stylesheet" href="mainStyle.css">
   <script src = "script.js" defer></script>
@@ -43,7 +44,7 @@
         </div>
           </div>
           <div class="right">
-            <img src="media/homeImage.png" width="500"alt="Home Image">
+            <img src="media/homeImage.png" alt="Home Image" class="responsive">
           </div>
 
 
