--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -32,10 +32,10 @@
         <div class="pageTitle"><h2>Register - Restaurant</h2>
         </div>
         <div class = "singular"> <!-- div where content goes -->
-        <div class = "rectangleBackground"> <!-- Driver Register -->
+        <div class = "rectangleBackground"> <!-- Restaurant Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/action_page.php" class="container">
+            <form action="/action_page.php">
               <h1>Restaurant</h1>
               <label for="fullname">Restaurant Name</label><br>
               <input type="text" placeholder="Enter Restaurant Name" id="fullname" name="name" required><br>
@@ -51,15 +51,14 @@
               <label for="Spsw">Security Answer</label><br>
               <input type="password" id="Spsw" placeholder="Enter Security Answer" name="psw" required><br>
 
-
               <label for="address">Street Address</label><br>
               <input type="text" placeholder="Enter Street Address" id="address" name="Raddress" required><br>
               <label for="extraAddress">City, State, Zip Code</label><br>
-              <input type="text" placeholder="Enter City, State, Zip Code" id="extraAddress" name="addressE" required><br>
-              <button type="submit" class="btn">SignUp</button>
+              <input type="text" placeholder="City, State, Zip Code" id="extraAddress" name="addressE" required><br><br>
+              <center><button type="submit" class="button2">Sign Up</button></center>
             </form>
         </div>
-      </div> <!-- Driver Register Ends -->
+      </div> <!-- Restaurant Register Ends -->
 
 
     </div> <!-- end of page content -->
