--- a/website/signUpOptions.html
+++ b/website/signUpOptions.html
@@ -40,7 +40,7 @@ you on our team!</p>
             <h1>Driver</h1>
             <p>You can become a driver if you have a mode of transportation and a smart device! You can decide when and how long you would like to work. So earn away!</p>
             <div class="buttonBox">
-              <a class = "button2" href="driverRegister.html">Sign Up</a>
+              <center><a class = "button2" href="driverRegister.html">Sign Up</a></center>
             </div>
         </div>
       </div> <!-- Driver Option Ends -->
@@ -54,7 +54,7 @@ increase your takeout sales! Reach out to more
 customers through our service and be amazed
 by the outreach. So earn away!</p>
           <div class="buttonBox">
-            <a class = "button2" href="restaurantRegister.html">Sign Up</a>
+            <center><a class = "button2" href="restaurantRegister.html">Sign Up</a></center>
           </div>
     </div> <!-- end of page content -->
 </div>
