--- a/website/signin.html
+++ b/website/signin.html
@@ -33,45 +33,46 @@
         <div class = "squareBackground"> <!-- Login  -->
           <img src="media/squareBackground.png" width="250">
           <div class="imageText">
-              <form action="/driver/Login " method="post" class="container">
+              <form action="/action_page.php">
                 <h1>Login</h1>
 
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
+                <label for="email"><b>Email</b></label><br>
+                <input type="text" placeholder="Enter Email" name="email" required><br><br>
 
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
+                <label for="psw"><b>Password</b></label><br>
+                <input type="password" placeholder="Enter Password" name="psw" required><br><br>
 
-                <button type="submit" class="btn">Login</button>
+                <center><button type="submit" class="button2">Login</button></center>
               </form>
         </div>
       </div> <!-- Login  Ends -->
+    </div>
 
-</div> <!-- end of main content -->
-</div> <!-- end of container -->
-<footer class="footer"> <!-- footer -->
-<div class = "bottomLinks">
-  <ul>
-    <li class="headingLinks">Product</li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Creatives</li>
-    <li><a href="creatives.html">Meet the Team</a></li>
-    <li><a href="https://github.com/jfk-sjsu/ODFDS">View on GitHub</a></li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Legal</li>
-    <li>Terms</li>
-    <li>Privacy</li>
-    <li>Copyright</li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Contact</li>
-    <li>(800) 000-0000</li>
-    <li>odfds@email.com</li>
-  </ul>
-</div> <!-- end of bottomLinks -->
-</footer> <!-- end of footer -->
-</body>
-</html>
+    </div> <!-- end of main content -->
+    </div> <!-- end of container -->
+    <footer class="footer"> <!-- footer -->
+    <div class = "bottomLinks">
+      <ul>
+        <li class="headingLinks">Product</li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Creatives</li>
+        <li><a href="creatives.html">Meet the Team</a></li>
+        <li><a href="https://github.com/jfk-sjsu/ODFDS">View on GitHub</a></li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Legal</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Copyright</li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Contact</li>
+        <li>(800) 000-0000</li>
+        <li>odfds@email.com</li>
+      </ul>
+    </div> <!-- end of bottomLinks -->
+    </footer> <!-- end of footer -->
+    </body>
+    </html>
