--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
               <li><a class="button1"href="signin.html">Log In</a></li>
-              <li><a class="button1"href="signupOptions.html">Sign Up</a></li>
+              <li><a class="button1"href="signUpOptions.html">Sign Up</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
