--- a/website/mainRestaurant.html
+++ b/website/mainRestaurant.html
@@ -5,7 +5,7 @@
   <script src = "script.js" defer></script>
   <head>
     <meta charset="utf-8">
-    <title>ODFDS | Restaurant Registration</title>
+    <title>ODFDS | Restaurant</title>
   </head>
   <body>
     <div class="container"> <!-- wrapper -->
@@ -19,43 +19,38 @@
           </a>
           <div class = "navbar-links"> <!-- navbar-links -->
             <ul>
+              <li><a href="mainRestaurant.html">Main</a></li>
+              <li><a href="historyRestaurant.html">History</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
-              <li><a class="button1"href="signin.html">Log In</a></li>
-              <li><a class="button1"href="signupOptions.html">Sign Up</a></li>
+              <li><a class="button1"href="index.html">Sign Out</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
 
   <!-- WHERE PAGE CONTENT IS INSERTED -->
 
-        <div class="pageTitle"><h2>Register - Restaurant</h2>
+        <div class="pageTitle"><h2>Restaurant Activity</h2>
+          <p>Let's get to work! Let us know if there are orders to deliver!</p>
         </div>
         <div class = "singular"> <!-- div where content goes -->
-        <div class = "rectangleBackground"> <!-- Restaurant Register -->
+        <div class = "rectangleBackground"> <!-- Restaurant Order Form -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
             <form action="/action_page.php">
-              <h1>Restaurant</h1>
-              <label for="fullname">Restaurant Name</label><br>
-              <input type="text" placeholder="Enter Restaurant Name" id="fullname" name="name" required><br>
-              <label for="email"><b>Email</b></label><br>
-              <input type="text" id="email" placeholder="Enter Email" name="email" required><br>
-              <label for="psw"><b>Password</b></label><br>
-              <input type="password" id="psw" placeholder="Enter Password" name="psw" required><br>
+              <h1>Place an Order</h1><br>
+              <label for="fullname">Customer's Name</label><br>
+              <input type="text" placeholder="Enter Customer's Name" id="fullname" name="name" required><br><br>
 
-              <label for="phone">Phone Number</label><br>
-              <input type="tel" placeholder="123-456-7890" id="phone" name="phone" required><br>
 
-              <label for="address">Street Address</label><br>
-              <input type="text" placeholder="Enter Street Address" id="address" name="Raddress" required><br>
+              <label for="address">Customer's Delivery Address</label><br>
+              <input type="text" placeholder="Enter Customer's Address" id="address" name="Raddress" required><br><br>
               <label for="extraAddress">City, State, Zip Code</label><br>
-              <input type="text" placeholder="City, State, Zip Code" id="extraAddress" name="addressE" required><br><br>
-              <center><button type="submit" class="button2">Sign Up</button></center>
+              <input type="text" placeholder="Enter City, State, Zip Code" id="extraAddress" name="addressE" required><br><br><br>
+              <center><button type="submit" class="button2">Submit</button></center>
             </form>
         </div>
-      </div> <!-- Restaurant Register Ends -->
-
+      </div> <!-- Restaurant Order Form Ends -->
 
     </div> <!-- end of page content -->
 </div>
