--- a/website/signin.html
+++ b/website/signin.html
@@ -27,51 +27,70 @@
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
 
-        <div class="pageTitle"><h2>  </h2>
+        <div class="pageTitle"><h2>Login</h2>
+          <p>We’re excited to have you back!</p>
         </div>
         <div class = "singular"> <!-- div where content goes -->
         <div class = "squareBackground"> <!-- Login  -->
           <img src="media/squareBackground.png" width="250">
           <div class="imageText">
-              <form action="/driver/Login " method="post" class="container">
-                <h1>Login</h1>
+              <form action="/driver/Login">
+                <h1>Driver Login</h1>
 
-                <label for="email"><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
+                <label for="email"><b>Email</b></label><br>
+                <input type="text" placeholder="Enter Email" name="email" required><br><br>
 
-                <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
+                <label for="psw"><b>Password</b></label><br>
+                <input type="password" placeholder="Enter Password" name="psw" required><br><br>
 
-                <button type="submit" class="btn">Login</button>
+                <center><button type="submit" class="button2">Login</button></center>
               </form>
         </div>
       </div> <!-- Login  Ends -->
 
-</div> <!-- end of main content -->
-</div> <!-- end of container -->
-<footer class="footer"> <!-- footer -->
-<div class = "bottomLinks">
-  <ul>
-    <li class="headingLinks">Product</li>
-    <li><a href="about.html">About</a></li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Creatives</li>
-    <li><a href="creatives.html">Meet the Team</a></li>
-    <li><a href="https://github.com/jfk-sjsu/ODFDS">View on GitHub</a></li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Legal</li>
-    <li>Terms</li>
-    <li>Privacy</li>
-    <li>Copyright</li>
-  </ul>
-  <ul>
-    <li class="headingLinks">Contact</li>
-    <li>(800) 000-0000</li>
-    <li>odfds@email.com</li>
-  </ul>
-</div> <!-- end of bottomLinks -->
-</footer> <!-- end of footer -->
-</body>
-</html>
+      <div class = "squareBackground"> <!-- Login  -->
+        <img src="media/squareBackground.png" width="250">
+        <div class="imageText">
+            <form action="/restaurant/Login">
+              <h1>Restaurant Login</h1>
+
+              <label for="email"><b>Email</b></label><br>
+              <input type="text" placeholder="Enter Email" name="email" required><br><br>
+
+              <label for="psw"><b>Password</b></label><br>
+              <input type="password" placeholder="Enter Password" name="psw" required><br><br>
+
+              <center><button type="submit" class="button2">Login</button></center>
+            </form>
+      </div>
+    </div> <!-- Login  Ends -->
+    </div>
+
+    </div> <!-- end of main content -->
+    </div> <!-- end of container -->
+    <footer class="footer"> <!-- footer -->
+    <div class = "bottomLinks">
+      <ul>
+        <li class="headingLinks">Product</li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Creatives</li>
+        <li><a href="creatives.html">Meet the Team</a></li>
+        <li><a href="https://github.com/jfk-sjsu/ODFDS">View on GitHub</a></li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Legal</li>
+        <li>Terms</li>
+        <li>Privacy</li>
+        <li>Copyright</li>
+      </ul>
+      <ul>
+        <li class="headingLinks">Contact</li>
+        <li>(800) 000-0000</li>
+        <li>odfds@email.com</li>
+      </ul>
+    </div> <!-- end of bottomLinks -->
+    </footer> <!-- end of footer -->
+    </body>
+    </html>
