updated pages to match db

--- a/website/mainRestaurant.html
+++ b/website/mainRestaurant.html
@@ -45,8 +45,9 @@
 
               <label for="address">Customer's Delivery Address</label><br>
               <input type="text" placeholder="Enter Customer's Address" id="address" name="Raddress" required><br><br>
-              <label for="extraAddress">City, State, Zip Code</label><br>
-              <input type="text" placeholder="Enter City, State, Zip Code" id="extraAddress" name="addressE" required><br><br><br>
+
+              <label for="Raddress">Restaurant's Address</label><br>
+              <input type="text" placeholder="Enter Restaurant's Address" id="Raddress" name="Raddress" required><br><br>
               <center><button type="submit" class="button2">Submit</button></center>
             </form>
         </div>
