--- a/website/index.html
+++ b/website/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" href="styles1.css">
   <link rel="stylesheet" href="mainStyle.css">
   <script src = "script.js" defer></script>
@@ -22,7 +23,7 @@
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
               <li><a class="button1"href="signin.html">Log In</a></li>
-              <li><a class="button1"href="signUpOptions.html">Sign Up</a></li>
+              <li><a class="button1"href="signupOptions.html">Sign Up</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
@@ -43,7 +44,7 @@
         </div>
           </div>
           <div class="right">
-            <img src="media/homeImage.png" width="500"alt="Home Image">
+            <img src="media/homeImage.png" alt="Home Image" class="responsive">
           </div>
 
 
