added post method

--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -35,7 +35,7 @@
         <div class = "rectangleBackground"> <!-- Restaurant Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/action_page.php">
+            <form action="/rest/SignUp" method="post">
               <h1>Restaurant</h1>
               <label for="fullname">Restaurant Name</label><br>
               <input type="text" placeholder="Enter Restaurant Name" id="fullname" name="name" required><br>
