--- a/website/driverRegister.html
+++ b/website/driverRegister.html
@@ -35,7 +35,7 @@
         <div class = "rectangleBackground"> <!-- Driver Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/driver/SignUp">
+            <form action="/driver/SignUp" method="post">
               <h1>Driver</h1>
               <label for="fullname">Name</label><br>
               <input type="text" placeholder="Enter Full Name" id="fullname" name="name" required><br>
