--- a/website/mainRestaurant.html
+++ b/website/mainRestaurant.html
@@ -37,7 +37,7 @@
         <div class = "rectangleBackground"> <!-- Restaurant Order Form -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-            <form action="/action_page.php">
+            <form action="/rest/newOrder" method="post">
               <h1>Place an Order</h1><br>
               <label for="fullname">Customer's Name</label><br>
               <input type="text" placeholder="Enter Customer's Name" id="fullname" name="name" required><br><br>
