--- a/website/restaurantApi.html
+++ b/website/restaurantApi.html
@@ -31,9 +31,9 @@ function setLatLong(address,zip,toLat,toLong) {
 <form action="/rest/login" method="post" > <!-- action must match route in main.js -->
 	<h1>restaurant login</h1>
 	<label for="username">email address</label><br>
-    <input type="text" placeholder="Enter username"  name="username" required><br> <!-- name= must match parameter in main.js, as described above -->
+    <input type="text" placeholder="Enter username"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
 	<label for="psw">Password</label><br>
-    <input type="password" placeholder="Enter Password" id="psw" name="password"><br>
+    <input type="password" placeholder="Enter Password" id="password" name="psw"><br>
 
 	<!-- here we need to call a script to get the lat and longitude --> 
 
@@ -50,8 +50,6 @@ function setLatLong(address,zip,toLat,toLong) {
 --> 
 <form action="/rest/logoff" method="post" > <!-- action must match route in main.js -->
 	<h1>restaurant logoff</h1>
-	<label for="restId">restaurant Id</label><br>
-    <input type="text" placeholder="Enter Restaurant Id"  name="restId" required><br> <!-- name= must match parameter in main.js, as described above -->
 
 	<input type="submit" value="Submit">
 </form>
@@ -100,8 +98,7 @@ function setLatLong(address,zip,toLat,toLong) {
 <form action="/rest/getOrders" method="post" > <!-- action must match route in main.js -->
 	<h1>restaurant getOrders</h1>
 	<label for="restId">restaurant Id</label><br>
-    <input type="text" placeholder="Enter restuarant Id"  name="restId" required><br> <!-- name= must match parameter in main.js, as described above -->
-
+ 
 	<input type="submit" value="Submit">
 </form>
 <!--
