--- a/website/restaurantRegister.html
+++ b/website/restaurantRegister.html
@@ -3,16 +3,6 @@
 <link rel="stylesheet" href="mainStyle.css">
   <link rel="stylesheet" href="styles1.css">
   <script src = "script.js" defer></script>
-  <script src = "geolocation.js"></script>
-  <script>
-	function setLatLong(address,zip,toLat,toLong) {
-		var add = document.getElementById(address).value + "," + document.getElementById(zip).value;
-		var latLong = getLatLong(add);
-		document.getElementById(toLat).value = latLong.latitude; 
-		document.getElementById(toLong).value = latLong.longitude;
-		return true;
-	}
-  </script>
   <head>
     <meta charset="utf-8">
     <title>ODFDS | Restaurant Registration</title>
@@ -45,7 +35,7 @@
         <div class = "rectangleBackground"> <!-- Restaurant Register -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
-			<form action="/rest/SignUp" method="post" onsubmit="return setLatLong('address1','zip1','lat1','long1')"> <!-- action must match route in main.js -->
+			<form action="/rest/SignUp" method="post" 
 				<h1>Retaurant SignUp</h1>
 				<label for="username">Name</label><br>
 				<input type="text" placeholder="Enter name"  name="name" required><br> <!-- name= must match parameter in main.js, as described above -->
@@ -63,12 +53,7 @@
 				
 				<label for="phone">Phone</label><br>
 				<input type="text" placeholder="Enter Phone"  name="phone" required><br> <!-- name= must match parameter in main.js, as described above -->
-				
 
-				<!-- here we need to call a script to get the lat and longitude --> 
-
-				<input id="lat1" name="rLat" style="display: none;">
-				<input id="long1" name="rLong" style="display: none;"></input>
 				<input type="submit" value="Submit">
 			</form>
         </div>
