--- a/website/restaurantMain.html
+++ b/website/restaurantMain.html
@@ -14,7 +14,7 @@
     <div class="container"> <!-- wrapper -->
       <div class ="main"> <!-- all content goes here -->
         <nav class = "navbar"> <!-- navbar -->
-          <div class="logo"><a href="index.html"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
+          <div class="logo"><a href="/rest/logoff"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
           <a href="#" class = "toggle-button">
           <span class ="bar"></span>
           <span class ="bar"></span>
