--- a/website/signin.html
+++ b/website/signin.html
@@ -7,7 +7,7 @@
   <script> 
 	function setLatLong() { 
 		getPosition('lat1', 'long1','err');
-		getPosition("lat2", "long2","err");
+		 
 	} 
   </script>
 
@@ -57,8 +57,8 @@
 
 			<!-- here we need to call a script to get the lat and longitude --> 
 
-			<input id="lat1" name="dLat" style="display: none;">
-			<input id="long1" name="dLong" style="display: none;">
+			<input id="lat1" name="dLat" style="display: none;" value="0.0">
+			<input id="long1" name="dLong" style="display: none;"value="0.0">
 			<input type="submit" value="Submit">
 		</form>        </div>
       </div> <!-- Login  Ends -->
