--- a/website/driverMain.html
+++ b/website/driverMain.html
@@ -21,7 +21,7 @@
             <ul>
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
-              <li><a class="button1"href="index.html">Sign Out</a></li>
+              <li><a class="button1"href="/driver/logoff">Sign Out</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
