--- a/website/restaurantMain.html
+++ b/website/restaurantMain.html
@@ -3,7 +3,16 @@
 <link rel="stylesheet" href="mainStyle.css">
   <link rel="stylesheet" href="styles1.css">
   <script src = "script.js" defer></script>
-
+  <script src = "tableify.js"></script>
+  <script> 
+	function getOpenOrders() { 
+		fetch('/rest/getOrders/').then(function(response) {
+		  response.text().then(function(text) {
+		      tableify(text,document.getElementById('openOrders'));
+		  });
+		});
+	};
+  </script>
   <head>
     <meta charset="utf-8">
     <title>ODFDS | Restaurant</title>
@@ -35,6 +44,9 @@
           <p>Let's get to work! Let us know if there are orders to deliver!</p>
         </div>
         <div class = "singular"> <!-- div where content goes -->
+        <!-- list of open orders -->
+        <div id="openOrders"></div>
+	<input type="button" onclick="getOpenOrders()" value="Change content">
         <div class = "rectangleBackground"> <!-- Restaurant Order Form -->
           <img src="media/rectangleBackground.png" width="250">
           <div class="imageText">
