--- a/website/driverApi.html
+++ b/website/driverApi.html
@@ -20,15 +20,14 @@
 <!-- we need to get our geolocation data before we post -->
 <script>
 	getPosition("lat1", "long1","err"); <!-- this sets the lat and long for the input forms. -->
-	getPosition("lat2", "long2","err"); <!-- this sets the lat and long for the input forms. -->
 </script>
 <div id="err"></div>
 <form action="/driver/login" method="post" > <!-- action must match route in main.js -->
 	<h1>Driver login</h1>
 	<label for="username">email address</label><br>
-    <input type="text" placeholder="Enter username"  name="username" required><br> <!-- name= must match parameter in main.js, as described above -->
+    <input type="text" placeholder="Enter username"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
 	<label for="psw">Password</label><br>
-    <input type="password" placeholder="Enter Password" id="psw" name="password"><br>
+    <input type="password" placeholder="Enter Password" id="psw" name="psw"><br>
 
 	<!-- here we need to call a script to get the lat and longitude --> 
 
@@ -61,6 +60,14 @@
 	<input type="submit" value="Submit">
 </form>
 
+<!-- get orders assigned to driver. 
+
+-->
+<form action="/driver/getOrders/" method="post">
+	<h1>Get Driver Orders</h1>
+
+	<input type="submit" value="Submit">
+</form>
 <!--
 /driver/getDriverDetails
   purpose: gets the information from the database about this driver. 
@@ -84,26 +91,7 @@
   return: 
     boolean True if no error else Error message. 
   Notes: 
-  
-/driver/ackOrderRequest
-  purpose: When an order is sent to a driver, the drivers calls this function to accept of decline 
-  params: 
-    driverID  type:driverID 
-    accept  type:Boolean
-  return: 
-    orderID type: numeric ID for an order else -1 if order was declined. 
-  Notes: If order is declined, system must find another driver. 
-  
-/driver/ackCollectedOrder
-  purpose: When driver is at restaurant, the system passes the order to the driver. This call acknowledges that the order is received.  
-  params: 
-    driverID  type:driverID 
-    driverLoc type:web based location coordinates
-    acknowledge type:boolean
-  return: 
-    boolean True if no error else Error message. 
-  Notes: IF driver fails to ack, order goes back out for bid. 
-  
+
 /driver/ntfDeliveredOrder
   purpose: sets the driver as "active" letting the system know that the driver is available for deliveries. 
   params: 
@@ -155,11 +143,7 @@
 	<label for="pay">Bank Account</label><br>
     <input type="text" placeholder="Enter bank account number"  name="pay" required><br> <!-- name= must match parameter in main.js, as described above -->
 	
-	
-	<!-- here we need to call a script to get the lat and longitude --> 
 
-	<input id="lat2" name="dLat" style="display: none;">
-	<input id="long2" name="dLong" style="display: none;"></input>
 	<input type="submit" value="Submit">
 </form>
 </body>
