--- a/website/historyDriver.html
+++ b/website/historyDriver.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <link rel="stylesheet" href="mainStyle.css">
   <link rel="stylesheet" href="styles1.css">
+	<link rel="stylesheet" href="tablify.css">
   <script src = "script.js" defer></script>
   <head>
     <meta charset="utf-8">
@@ -36,7 +37,7 @@
         <div class = "singular"> <!-- div where content goes -->
           <div> <!-- history div -->
             <h3>Orders</h3>
-            <script>
+<script>
 	function getOrders() {
 		fetch('/driver/getOrders/').then(
 			function (response) {
