--- a/website/historyDriver.html
+++ b/website/historyDriver.html
@@ -20,7 +20,7 @@
           </a>
           <div class = "navbar-links"> <!-- navbar-links -->
             <ul>
-              <li><a href="mainDriver.html">Main</a></li>
+              <li><a href="driverMain.html">Main</a></li>
               <li><a href="historyDriver.html">History</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
