--- a/website/restaurantMain.html
+++ b/website/restaurantMain.html
@@ -22,8 +22,9 @@
   <body>
     <div class="container"> <!-- wrapper -->
       <div class ="main"> <!-- all content goes here -->
-        <nav class = "navbar"> <!-- navbar -->
-          <div class="logo"><a href="/rest/logoff"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
+        <div class ="main"> <!-- all content goes here -->
+                <nav class = "navbar"> <!-- navbar -->
+          <div class="logo"><a href="index.html"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
           <a href="#" class = "toggle-button">
           <span class ="bar"></span>
           <span class ="bar"></span>
@@ -31,12 +32,15 @@
           </a>
           <div class = "navbar-links"> <!-- navbar-links -->
             <ul>
+              <li><a href="restaurantMain.html">Main</a></li>
+              <li><a href="historyRestaurant.html">History</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
-              <li><a class="button1"href="index.html">Sign Out</a></li>
+              <li><a class="button1"href="/rest/logoff">Sign Out</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
+
 
   <!-- WHERE PAGE CONTENT IS INSERTED -->
 
