--- a/website/historyRestaurant.html
+++ b/website/historyRestaurant.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <link rel="stylesheet" href="mainStyle.css">
   <link rel="stylesheet" href="styles1.css">
+  <link rel="stylesheet" href="tablify.css">
   <script src = "script.js" defer></script>
   <head>
     <meta charset="utf-8">
@@ -10,7 +11,7 @@
   <body>
     <div class="container"> <!-- wrapper -->
       <div class ="main"> <!-- all content goes here -->
-        <nav class = "navbar"> <!-- navbar -->
+                       <nav class = "navbar"> <!-- navbar -->
           <div class="logo"><a href="index.html"><img src="media/logo.png" height="50" alt="ODFDS>"</a></div>
           <a href="#" class = "toggle-button">
           <span class ="bar"></span>
@@ -19,11 +20,11 @@
           </a>
           <div class = "navbar-links"> <!-- navbar-links -->
             <ul>
-              <li><a href="mainRestaurant.html">Main</a></li>
+              <li><a href="restaurantMain.html">Main</a></li>
               <li><a href="historyRestaurant.html">History</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="creatives.html">Creatives</a></li>
-              <li><a class="button1"href="index.html">Sign Out</a></li>
+              <li><a class="button1"href="/rest/logoff">Sign Out</a></li>
             </ul>
           </div> <!-- end of navbar-links -->
         </nav> <!-- end of navbar -->
@@ -36,7 +37,21 @@
         <div class = "singular"> <!-- div where content goes -->
           <div> <!-- history div -->
             <h3>Orders</h3>
-            <p>Insert table of orders here!</p>
+           <script>
+	function getOrders() {
+		fetch('/driver/getOrders/').then(
+			function (response) {
+				response.text().then(
+					function (text) {
+
+						tableify(text, document.getElementById('orders'));
+					});
+			});
+	};
+</script>
+
+<div id="orders"></div>
+<body onload='getOrders()'>
           </div> <!-- end of delivery text div -->
           </div> <!-- end of activity div -->
     </div> <!-- end of page content -->
