--- a/website/driverApi.html
+++ b/website/driverApi.html
@@ -6,22 +6,22 @@
 	getPosition('lat1', 'long1','err'); <!-- this sets the lat and long for the input forms. -->
 }
 </script>
-<body onload="setPos()"> 
+<body onload="setPos()">
 
 <!---------------- How to call the driver apis ---------------------------------------------------------->
-<!--           These snippets give the driver apis and examples of how to reach them via HTTP 
-				Each one uses a 'route' to access a particular function for a driver. 
+<!--           These snippets give the driver apis and examples of how to reach them via HTTP
+				Each one uses a 'route' to access a particular function for a driver.
 				See the other api.html files for restaurant, order (customer) and db access for testing -->
 <!--
-/driver/Login 
+/driver/Login
   purpose: authenticates the driver to the system for all communications
-  params: 
+  params:
     username  type:string
     password  type:encrypted string
 	dLat	type: long
 	dLong	type: long
   return:
-    driverID  type:  "driver ID" identifying the driver in all future comms. Should be randomly generated and unique 
+    driverID  type:  "driver ID" identifying the driver in all future comms. Should be randomly generated and unique
 -->
 <!-- we need to get our geolocation data before we post -->
 
@@ -33,42 +33,46 @@
 	<label for="psw">Password</label><br>
     <input type="password" placeholder="Enter Password" id="psw" name="psw"><br>
 
-	<!-- here we need to call a script to get the lat and longitude --> 
+	<!-- here we need to call a script to get the lat and longitude -->
 
 	<input id="lat1" name="dLat" style="display: none;">
 	<input id="long1" name="dLong" style="display: none;"></input>
 	<input type="submit" value="Submit">
 </form>
-<!-- 
-	
+<!--
+
 /driver/logout
   purpose: logs the driver off duty
-  params: 
-	driverID 
-  return: 
-	sends the you are logged off page 
---> 
+  params:
+	driverID
+  return:
+	sends the you are logged off page
+-->
 <form action="/driver/logoff" method="get" > <!-- action must match route in main.js -->
 	<h1>Driver logoff</h1>
 
 	<input type="submit" value="Submit">
 </form>
-<!-- select an order 
-	let's the driver select an order to deliver. 
+<!-- select an order
+	let's the driver select an order to deliver.
 	params: orderId
 	return: true or false
 -->
-<form action="/driver/selectOrder/" method="post"> 
+<form action="/driver/selectOrder/" method="post">
 	<h1>Select order</h1>
 	<label for="orderId">OrderId</label><br>
     	<input type="text" placeholder="Enter OrderID"  name="orderId" required><br> <!-- name= must match parameter in main.js, as described above -->
 	<input type="submit" value="Submit">
 </form>
-<!-- get restaurant for orderid 
+<!-- get restaurant for orderid
 	param: orderId
 	returns: json object with rest information
 -->
-
+<form action="/driver/orderPickedUp/" method="post">
+		<h1>Order collected for delivery</h1>
+		<input type="text" placeholder="Enter Order ID" name="orderId"><br>
+		<input type="submit" value="Submit">
+</form>
 <div id="restForOrder"></div>
 <form action="/driver/getRestForOrder/" method="POST" >
 
@@ -77,9 +81,9 @@
     	<input type="text" placeholder="Enter OrderID"  name="orderId" required><br> <!-- name= must match parameter in main.js, as described above -->
 	<input type="submit" value="submit">
 </form>
-<!-- get open orders 
-	params: DriverId (so none) 
-	returns: open orders available to that driver within their lat lang params. 
+<!-- get open orders
+	params: DriverId (so none)
+	returns: open orders available to that driver within their lat lang params.
 -->
 <form action="/driver/reqOpenOrders" method="post" > <!-- action must match route in main.js -->
 	<h1>Driver getOpenOrders</h1>
@@ -87,7 +91,7 @@
 	<input type="submit" value="Submit">
 </form>
 
-<!-- get orders assigned to driver. 
+<!-- get orders assigned to driver.
 
 -->
 <form action="/driver/getOrders/" method="get">
@@ -97,12 +101,12 @@
 </form>
 <!--
 /driver/getDriverDetails
-  purpose: gets the information from the database about this driver. 
-  params: 
+  purpose: gets the information from the database about this driver.
+  params:
 	none (uses session management)
-  return: 
-    text of drivers details. 
---> 
+  return:
+    text of drivers details.
+-->
 <form action="/driver/getDriverDetails" method="post" > <!-- action must match route in main.js -->
 	<h1>get Driver Details</h1>
 
@@ -111,39 +115,39 @@
 <!--
 
 /driver/sendLocation
-  purpose: sends the drivers location for recording in the DB. 
-  params: 
-    driverID  type:driverID 
+  purpose: sends the drivers location for recording in the DB.
+  params:
+    driverID  type:driverID
     driverLoc type:web based location coordinates
-  return: 
-    boolean True if no error else Error message. 
-  Notes: 
+  return:
+    boolean True if no error else Error message.
+  Notes:
 
 /driver/ntfDeliveredOrder
-  purpose: sets the driver as "active" letting the system know that the driver is available for deliveries. 
-  params: 
-    driverID  type:driverID 
+  purpose: sets the driver as "active" letting the system know that the driver is available for deliveries.
+  params:
+    driverID  type:driverID
     driverLoc type:web based location coordinates
     orderID   type:numeric ID for particular order
-  return: 
-    boolean True if no error else Error message. 
-  Notes: 
+  return:
+    boolean True if no error else Error message.
+  Notes:
 /driver/ntfInactive
-  purpose: sets the driver as "inactive" letting the system know that the driver is not available for deliveries. 
-  params: 
-    driverID  type:driverID 
+  purpose: sets the driver as "inactive" letting the system know that the driver is not available for deliveries.
+  params:
+    driverID  type:driverID
     driverLoc type:web based location coordinates
-  return: 
-    boolean True if no error else Error message. 
-  Notes: 
+  return:
+    boolean True if no error else Error message.
+  Notes:
 
  /driver/SignUp
    Purpose: puts a new user into the database for access
-   params: 
+   params:
       firstname type:text
       lastname  type:text
       password  type:text
-	  
+
    return:
       boolean success or fail
       driverId
@@ -154,24 +158,24 @@
     <input type="text" placeholder="Enter name"  name="name" required><br> <!-- name= must match parameter in main.js, as described above -->
 	<label for="email">email address</label><br>
     <input type="text" placeholder="Enter email"  name="email" required><br> <!-- name= must match parameter in main.js, as described above -->
-	
+
 	<label for="psw">Password</label><br>
     <input type="password" placeholder="Enter Full Name" id="psw" name="password"><br>
 
 	<label for="phone">Phone</label><br>
     <input type="text" placeholder="Enter Phone"  name="phone" required><br> <!-- name= must match parameter in main.js, as described above -->
-	
+
 	<label for="carmake">Car Make and Model</label><br>
     <input type="text" placeholder="Enter Car Make and Model"  name="carMake" required><br> <!-- name= must match parameter in main.js, as described above -->
-	
+
 	<label for="license">License Plate </label><br>
     <input type="text" placeholder="Enter license number"  name="license" required><br> <!-- name= must match parameter in main.js, as described above -->
-	
+
 	<label for="pay">Bank Account</label><br>
     <input type="text" placeholder="Enter bank account number"  name="pay" required><br> <!-- name= must match parameter in main.js, as described above -->
-	
+
 
 	<input type="submit" value="Submit">
 </form>
 </body>
-</html>	 
+</html>
