--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
         for pickup and delivery.  ODFDS needs a system for sub-contracted drivers to locate
         their next request for the food delivery.  Require mapping, time based traffic events,
         and location based searches to guarantee the wait time to < 40 minutes from the
-        time of request. REPLACE TEXT.</p>
+        time of request.</p>
         <div class="buttonBox">
           <a class = "button2" href="about.html">Learn More</a>
         </div>
